# BetfairTrading

./: .gitignore  CMakeLists.txt  README.md  gui.cpp  main.cpp
BetfairAPI/: AccountAPI.cpp  AccountAPI.h  AccountsAPI.cpp  BetfairManager.cpp  BetfairManager.h  BettingAPI.cpp  BettingAPI.h  CMakeLists.txt  CompetitionResult.cpp  CompetitionResult.h  Date.cpp  Date.h  EventResult.cpp  EventResult.h  EventTypeIds.hpp  EventTypeResult.cpp  EventTypeResult.h  LoginAPI.cpp  LoginAPI.h  MarketBettingType.hpp  MarketFilter.cpp  MarketFilter.h  OrderStatus.hpp  Response.cpp  Response.h  TimeGranularity.hpp  TimeRangeResult.cpp  TimeRangeResult.h  account_api.cpp  account_api.h  betfair_manager.cpp  betfair_manager.h  betting_api.cpp  betting_api.h  betting_type_json_serialiser.cpp  betting_type_json_serialiser.h  date.cpp  enum_utils.hpp  jurisdiction.hpp  login_api.cpp  (+8 more)
BetfairAPI/BettingEnums/: BetTargetType.hpp  ExecutionReportErrorCode.hpp  GroupBy.hpp  InstructionReportErrorCode.hpp  InstructionReportStatus.hpp  MarketSort.hpp  MarketStatus.hpp  MarketType.hpp  MatchProjection.hpp  OrderBy.hpp  OrderProjection.hpp  OrderType.hpp  PersistenceType.hpp  PriceData.hpp  RunnerStatus.hpp  Side.hpp  SortDir.hpp  TimeInForce.hpp
BetfairAPI/BettingType/: EventType.cpp  EventType.h  EventTypeResults.cpp  EventTypeResults.h  PriceSize.cpp  PriceSize.h  ReplaceInstruction.cpp  ReplaceInstruction.h
BetfairAPI/betting_enum/: bet_status.hpp  bet_target_type.hpp  execution_report_error_code.hpp  execution_report_status.hpp  group_by.hpp  instruction_report_error_code.hpp  instruction_report_status.hpp  market_betting_type.hpp  market_projection.hpp  market_sort.hpp  market_status.hpp  market_type.hpp  match_projection.hpp  order_by.hpp  order_projection.hpp  order_status.hpp  order_type.hpp  persistence_type.hpp  price_date.hpp  price_ladder_type.hpp  runner_status.hpp  side.hpp  sort_dir.hpp  time_granularity.hpp  time_in_force.hpp
BetfairAPI/betting_type/: cancel_execution_report.cpp  cancel_execution_report.h  cancel_instruction.cpp  cancel_instruction.h  cancel_instruction_report.cpp  cancel_instruction_report.h  cleared_order_summary.cpp  cleared_order_summary.h  cleared_order_summary_report.cpp  cleared_order_summary_report.h  competition.cpp  competition.h  competition_result.cpp  competition_result.h  country_code_result.cpp  country_code_result.h  current_item_description.cpp  current_item_description.h  current_order_summary.cpp  current_order_summary.h  current_order_summary_report.cpp  current_order_summary_report.h  event.cpp  event.h  event_result.cpp  event_result.h  event_type.cpp  event_type.h  event_type_results.cpp  event_type_results.h  exchange_prices.cpp  exchange_prices.h  exchange_prices.tpp  item_description.cpp  item_description.h  key_line_description.cpp  key_line_description.h  key_line_description.tpp  key_line_selection.cpp  key_line_selection.h  (+72 more)
BetfairAPI/include/BetfairAPI/: account_api.h  betting_api.h  date.h  manager.h  response.h  session_api.h  stream_api.h  utils.h
BetfairAPI/include/BetfairAPI/account_enum/: include_item.hpp  item_class.hpp  wallet.hpp
BetfairAPI/include/BetfairAPI/account_type/: account_details_response.h  account_funds_response.h  account_statement_report.h  json_serialiser.hpp  statement_item.h  time_range.h
BetfairAPI/include/BetfairAPI/betting_enum/: bet_status.hpp  bet_target_type.hpp  execution_report_error_code.hpp  execution_report_status.hpp  group_by.hpp  instruction_report_error_code.hpp  instruction_report_status.hpp  json_serialiser.hpp  market_betting_type.hpp  market_projection.hpp  market_sort.hpp  market_status.hpp  match_projection.hpp  order_by.hpp  order_projection.hpp  order_status.hpp  order_type.hpp  persistence_type.hpp  price_data.hpp  price_ladder_type.hpp  rollup_model.hpp  runner_status.hpp  side.hpp  sort_dir.hpp  (+2 more)
BetfairAPI/include/http/: client.h  request.h  response.h
BetfairAPI/src/: account_api.cpp  betting_api.cpp  date.cpp  manager.cpp  response.cpp  session.cpp  session_api.cpp  stream_api.cpp
BetfairAPI/src/BetfairAPI/: account_api.cpp  betting_api.cpp  date.cpp  manager.cpp  session_api.cpp  stream_api.cpp
BetfairAPI/src/betting_type/: json_serialiser.cpp
BetfairAPI/src/http/: client.cpp  request.cpp  response.cpp
BetfairAPI/utils/: date_utils.cpp  date_utils.h  enum_utils.hpp  math_utils.hpp  response.cpp  response.h
examples/: CMakeLists.txt  example_cancel_order.cpp  example_cancel_order.sh  example_list_order.cpp  example_list_order.sh  example_place_order.cpp  example_place_order.sh  example_replace_order.cpp  example_replace_order.sh  example_update_order.cpp  example_update_order.sh
tests/: CMakeLists.txt  test_betting_type_json_serialiser.cpp  test_date.cpp  test_date_utils.cpp  test_enum_utils.cpp  test_jurisdiction.cpp  test_main.cpp  test_market_filter.cpp  test_math_utils.cpp  test_response.cpp  test_utils.cpp
tests/BettingType/: test_event_type.cpp  test_event_type_results.cpp  test_price_size.cpp  test_replace_instruction.cpp
tests/account_type/: test_json_serialiser.cpp
tests/betting_type/: test_competition.cpp  test_competition_result.cpp  test_event.cpp  test_event_result.cpp  test_event_type.cpp  test_event_type_result.cpp  test_event_type_results.cpp  test_exchange_prices.cpp  test_json_serialiser.cpp  test_key_line_description.cpp  test_key_line_selection.cpp  test_limit_on_close_order.cpp  test_limit_order.cpp  test_market_filter.cpp  test_market_license.cpp  test_market_line_range_info.cpp  test_market_on_close_order.cpp  test_market_profit_loss.cpp  test_market_rates.cpp  test_market_type_result.cpp  test_market_version.cpp  test_match.cpp  test_order.cpp  test_place_instruction.cpp  test_price_ladder_description.cpp  test_price_size.cpp  test_replace_instruction.cpp  test_runner_id.cpp  test_runner_profit_and_loss.cpp  test_starting_prices.cpp  test_time_range.cpp  test_time_range_result.cpp  test_update_instruction.cpp  test_update_instruction_report.cpp
tests/market_type/: test_runner_data.cpp
tests/streaming_type/: test_json_serialiser.cpp
(+93 files in other folders)
